clusters/homelab/apps/auth-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-test
  namespace: auth-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: protected.tkuipers.ca
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.tkuipers.ca/?rd=$escaped_request_uri
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - protected.tkuipers.ca
    secretName: auth-test-tls
  rules:
  - host: protected.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-test
            port:
              number: 80
